# tgv

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTE.md  Cargo.toml  Dockerfile  HG002.GRCh38.300x_chr20.bam.bai  LICENSE.md  README.md  ROADMAP.md
.config/: insta.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: brew_template.tgv.rb  lint.yml  release.yml  test.yml
crates/gv-core/: Cargo.toml
crates/gv-core/src/: bed.rs  command.rs  contig_header.rs  cytoband.rs  error.rs  feature.rs  intervals.rs  lib.rs  logging.rs  message.rs  modification.rs  normal.rs  reference.rs  repository.rs  settings.rs  state.rs  states.rs  track.rs  variant.rs
crates/gv-core/src/alignment/: alignment.rs  coverage.rs  mod.rs  paired_alignment.rs  read.rs  repository.rs
crates/gv-core/src/register/: command.rs  mod.rs
crates/gv-core/src/resources/: hg38_cytoband.csv
crates/gv-core/src/sequence/: fasta.rs  mod.rs  twobit.rs  ucsc_api.rs
crates/gv-core/src/tracks/: downloader.rs  local_db.rs  mod.rs  schema.rs  ucsc_api.rs  ucsc_db.rs
crates/tgv/: .gitignore  Cargo.toml
crates/tgv/src/: app.rs  bed.rs  intervals.rs  layout.rs  lib.rs  main.rs  message.rs  mouse.rs  register.rs  session.rs  settings.rs  state.rs  variant.rs  window.rs
crates/tgv/src/register/: command.rs  help.rs  mod.rs  mouse.rs  normal.rs
crates/tgv/src/rendering/: alignment.rs  bed.rs  colors.rs  console.rs  contig_list.rs  coordinate.rs  coverage.rs  cytoband.rs  help.rs  intervals.rs  layout.rs  mod.rs  sequence.rs  status_bar.rs  track.rs  variants.rs
crates/tgv/src/resources/: defaultDb.csv
crates/tgv/src/sequence/: mod.rs  twobit.rs
crates/tgv/src/snapshots/: tgv__tests__None_--online.snap.new  tgv__tests__None_-g_GCF_028858775_2_-r_NC_072398_2_76951800_--online.snap.new  tgv__tests__None_-g_ecoli_--offline_--cache-dir_tests__data__cache.snap.new  tgv__tests__None_-g_mm39.snap.new  tgv__tests__None_-g_wuhCor1.snap.new  tgv__tests__None_-g_wuhCor1_--offline_--cache-dir_tests__data__cache.snap.new  tgv__tests__None_-r_TP53.snap.new  tgv__tests__None_-r_TP53_-g_hg19.snap.new  tgv__tests__covid_sorted_bam_--no-reference.snap.new  tgv__tests__covid_sorted_bam_--no-reference_-r_MN908947_3_100.snap.new  tgv__tests__covid_sorted_bam_--no-reference_-r_MN908947_3_100_--offline.snap.new  tgv__tests__covid_sorted_bam_-g_covid_--offline_--cache-dir_tests__data__cache.snap.new  tgv__tests__covid_sorted_bam_-g_tests__data__cache__wuhCor1__wuhCor1_2bit_--offline.snap.new  tgv__tests__covid_sorted_bam_-g_tests__data__covid_fa_--offline.snap.new  tgv__tests__ncbi_sorted_bam_-r_22_33121120_-g_hg19.snap.new  tgv__tests__ncbi_sorted_bam_-r_22_33121120_-g_hg19_--online.snap.new  tgv__tests__ncbi_sorted_bam_-r_chr22_33121120_--no-reference.snap.new  tgv__tests__ncbi_sorted_bam_-r_chr22_33121120_--no-reference_--offline.snap.new  tgv__tests__ncbi_sorted_bam_-r_chr22_33121120_-v_tests__data__simple_vcf_-b_tests__data__simple_bed_--no-reference_--offline.snap.new
crates/tgv/tests/: offline_app.rs  online_app.rs
crates/tgv/tests/data/: covid.sorted.bam  ncbi.sorted.bam.bai  simple.bed
crates/tgv/tests/data/cache/GCF_000005845.2/: hub.txt
crates/tgv/tests/data/cache/wuhCor1/: wuhCor1.2bit
crates/tgv/tests/support/: mod.rs
doc/: book.toml
doc/src/: SUMMARY.md  contributing.md  installation.md  introduction.md  session.md  troubleshoot.md  usage.md
doc/src/design/: base-modification-rendering.md
docs/: key_bindings.md
src/: alignment.rs  app.rs  bed.rs  contig.rs  contig_collection.rs  contig_header.rs  cytoband.rs  display_mode.rs  error.rs  feature.rs  helpers.rs  intervals.rs  main.rs  message.rs  reference.rs  region.rs  register.rs  repository.rs  sequence.rs  settings.rs  states.rs  strand.rs  track.rs  track_service.rs  traits.rs  ucsc.rs  variant.rs  window.rs
src/alignment/: alignment.rs  coverage.rs  mod.rs  read.rs  repository.rs
src/models/: alignment.rs  contig.rs  contig_collection.rs  cytoband.rs  data.rs  message.rs  mod.rs  mode.rs  reference.rs  region.rs  register.rs  sequence.rs  strand.rs  track.rs  window.rs
src/models/services/: mod.rs  sequences.rs  track_service.rs  tracks.rs
src/models/services/tracks/: mod.rs  ucscapi.rs  ucscdb.rs
src/models/track/: feature.rs  mod.rs  track.rs
src/register/: command.rs  contig_list.rs  help.rs  mod.rs  mouse.rs  normal.rs
src/rendering/: alignment.rs  bed.rs  chromosome.rs  colors.rs  console.rs  contig_list.rs  coordinate.rs  coverage.rs  cytoband.rs  debug.rs  error.rs  help.rs  intervals.rs  layout.rs  mod.rs  sequence.rs  status_bar.rs  track.rs  variants.rs
src/resources/: defaultDb.csv  hg19_chrominfo.csv  hg19_cytoband.csv  hg38_chrominfo.csv
src/sequence/: fasta.rs  mod.rs  twobit.rs  ucsc_api.rs
src/tracks/: downloader.rs  local_db.rs  mod.rs  schema.rs  ucsc_api.rs  ucsc_db.rs
tests/: README.md
tests/data/: GCF_000005845.2.hub.txt  covid.sorted.bam.bai  ecoli.chrom.sizes.txt  simple.bed  simple.vcf
tests/data/cache/GCF_000005845.2/: GCF_000005845.2.2bit  GCF_000005845.2.chromAlias.bb  GCF_000005845.2_ASM584v2.cytoBand.bb  GCF_000005845.2_ASM584v2.ncbiGene.bb  tracks.sqlite
tests/data/cache/wuhCor1/: tracks.sqlite
