[workspace]
members = ["crates/gv-core", "crates/tgv"]

[workspace.dependencies]
# Non-local crates

async-compat = "0.2.5"
async-trait = "0.1"
bigtools = "0.5"
bytes = "1.10.1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.28.1"
csv = "1.3.1"
futures = "0.3.31"
itertools = "0.14.0"
nom = "8.0.0"
noodles = { version = "0.99.0", features = ["async", "bam", "bed", "bgzf", "core", "cram", "fasta", "sam", "vcf"] }
opendal = { version = "0.53.3", features = ["services-s3"] }
ratatui = "0.28.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1"
sqlx = { version = "0.7", features = ["mysql", "sqlite", "runtime-tokio-native-tls"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2" }
tokio = { version = "1", features = ["full"] }
twobit = "0"
url = "2.5.4"

# local crates

gv-core = { path = 'crates/gv-core', version = "0" }
