[workspace]
members = ["crates/gv-core", "crates/tgv"]
resolver = "3"

[workspace.dependencies]
# Non-local crates

async-compat = "0"
async-trait = "0"
bigtools = "0"
bytes = "1"
chrono = { version = "0", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0"
csv = "1"
futures = "0"
itertools = "0"
nom = "8"
noodles = { version = "0", features = ["async", "bam", "bed", "bgzf", "core", "cram", "fasta", "sam", "vcf"] }
opendal = { version = "0.53.3", features = ["services-s3"] }
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.8"
shellexpand = "3.1"
sqlx = { version = "0.7", features = ["mysql", "sqlite", "runtime-tokio-native-tls"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2" }
tokio = { version = "1", features = ["full"] }
twobit = "0"
url = "2.5.4"

# local crates

gv-core = { path = "crates/gv-core", version = "=0.2.0" }

[profile.release] # as recommended in https://github.com/ratatui/ratatui-website/pull/931/files
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables link-time optimization.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.
