[package]
name = "gv-core"
version = "0.2.0"
edition = "2024"
description = "Core library for the terminal genome viewer."
license = "MIT"
repository = "https://github.com/zeqianli/tgv"
homepage = "https://github.com/zeqianli/tgv"

[dependencies]
async-compat.workspace = true
async-trait.workspace = true
bigtools.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
ferro-hgvs = "0.2.0"
futures.workspace = true
itertools.workspace = true
native-tls.workspace = true
nom.workspace = true
noodles.workspace = true
opendal.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shellexpand.workspace = true
sqlx.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
twobit.workspace = true
url.workspace = true

[dev-dependencies]
cargo-insta = "1.42"
insta = "1.42"
rstest = "0.25.0"
shlex = "1.3.0"
tempfile = "3"
