[package]
name = "tgv"
version = "0.2.0"
edition = "2024"
description = "Explore genomes in the terminal. Light, blazing fast 🚀, vim-motion."
license = "MIT"
rust-version = "1.88"
include = ["src/*", "!src/snapshots", "Cargo.toml", "./README.md"]

[dependencies]
clap.workspace = true
crossterm.workspace = true
futures.workspace = true
gv-core.workspace = true
itertools.workspace = true
nom.workspace = true
ratatui.workspace = true
serde.workspace = true
shellexpand.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
cargo-insta = "1.42"
insta = "1.42"
rstest = "0.25.0"
shlex = "1.3.0"
tempfile = "3"
